force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__AttributeGroupType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeGroupType__c</fullName>
    <description>Attribute group type of this product jurisdiction network. Support the mapping between the attribute groups (defined when creating Attributes for Attribute Categories) and Networks and specific Jurisdiction.</description>
    <label>Attribute Group Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>