force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__CoverageId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CoverageId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the health plan coverage</description>
    <label>Coverage Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.vlocity_ins__RecordTypeName__c</field>
            <operation>equals</operation>
            <value>CoverageSpec</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coverage Id</relationshipLabel>
    <relationshipName>CoverageId</relationshipName>
    <type>Lookup</type>
</CustomField>