force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
    <description>End date that defines when the product jurisdiction network is applicable</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>