force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
    <description>Start date that defines when the product jurisdiction network is applicable</description>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>