force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__JurisdictionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__JurisdictionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the jurisdiction where the insurance product/plan is available.</description>
    <label>Jurisdiction</label>
    <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
    <relationshipLabel>ProductJurisdictionNetworks</relationshipLabel>
    <relationshipName>ProductJurisdictionNetworks</relationshipName>
    <type>Lookup</type>
</CustomField>