force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__ProviderNetworkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Providers Network which is accepting the insurance</description>
    <label>Provider Network</label>
    <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
    <relationshipLabel>Networks Product Jurisdictions</relationshipLabel>
    <relationshipName>NetworksProductJurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>